    * Use column headers for min/max/cur/avg if label is too long.
    * Minor template modifications, so the output HTML validates correctly
      (SF#1039850).

  - Munin-node:
    * Added module Munin::Plugin::SNMP, a Net::SNMP sublcass for plugins.
    * The node now changes dir to /, to make sure it's in a directory
      readable by all users.

  - Plugins
    * SNMP plugin "df" properly strips the label and serial number from
      Windows drive labels.
    * SNMP plugins now honour the "host" environment variable if they can't
      deduce the hostname from $0.
    * Use @@PERL@@ in all perl shebang lines.
    * Added new SNMP plugins for sensors, reading info from System-Informant on
      Windows boxes.
    * New wildcard plugin generic/ping_ to graph ping times.
    * Replace "rpc" field with "total" in NFS and NFSD plugins.
    * Added new plugin linux/apt_all, contributed by xavier.
    * Added new plugins generic/courier_mta*, contributed by Rune N.
      Skillingstad.
    * Plugin generic/acpi now autodetects even if the acpi version does not
      contain the acpi_available program.
    * Added plugin linux/irqstast, showing individual interrupt rates.
    * Fixed typo in linux/fw_forwarded_local (Deb#275535).
    * Fixed typo in linux/fw_packets (Deb#275537).
    * Added SNMP plugins for temperature and fan info provided by the
      Fujitsu Siemens ServerView agents.
    * Adapt linux/apt plugin to work properly with Debian testing/unstable
      (patch from Rune N. Skillingstad).
    * Added new plugin generic/apc_nis to monitor APC UPS, contributed by
      xavier.
    * Made graph_title a parameter for generic/exim_mailqueue (patch by Torstein
      T. Svendsen, SF#1060834).
    * Fixed typo in generic/sendmail_mailstats (patch by Lupe Christoph,
      SF#1058128).
    * Applied patch from Torstein T. Svendsen to generic/exim_mailstats, to
      handle logfiles with timestamps in the name (SF#1055214).